--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step5Manual.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/Step5Manual.jspf
@@ -34,7 +34,7 @@
 <f:subview id="easySubmissionStep3Manual">
 
 <div class="clear">
-	<div class="headerSection">
+	<div class="headerSection headerDistanceFix">
 	
 	<jsp:directive.include file="../../header/Breadcrumb.jspf" />
 
