--- a/pubman/pubman_presentation/src/main/webapp/header/Header.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/Header.jspf
@@ -54,8 +54,8 @@
 	<jsp:directive.include file="ui/MetaMenu.jspf"/>
 	<div class="full_area0 LogoNSearch">
 		<h:outputLink id="lnkStartPage" title="#{tip.navigation_lblStartpage}" value="#{ApplicationBean.appContext}HomePage.jsp">
-			<span class="xTiny_marginLExcl half_area0 headerLogo">
-				<h:panelGroup styleClass="half_area0 themePark #{Header.serverLogo}"></h:panelGroup>
+			<span class="tiny_marginLExcl quad_area0 headerLogo">
+				<h:panelGroup styleClass="quad_area0 themePark #{Header.serverLogo}"></h:panelGroup>
 			</span>
 		</h:outputLink>
 		<%-- import search here--%>
