--- a/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
@@ -89,6 +89,22 @@
 		<tr:iterator id="iterCreatorOrganisationAuthors" var="creator" value="#{EditItemSessionBean.creators}" rows="0">
 			<h:panelGroup layout="block" styleClass="full_area0 suggestAnchor endline">
 <%-- Creator person family name, Creator person given name --%>
+				<h:panelGroup layout="block" styleClass="free_area0 endline" rendered="#{creator.personType and !(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'easy-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
+					<span class="large_area0 xSmall_marginRExcl">&nbsp;</span>
+					<span class="xTiny_area0">&nbsp;</span>
+					<div class="small_area0 endline selectContainer">
+						<div class="small_area0">
+							<span style="white-space:nowrap; width:3.7272em;" class="free_area0 selectionBox">Deutsch</span>
+							<div style="padding-right:1.1818em;" class="selectboxIcon">&nbsp;</div>
+						</div>
+						<select title="Sprachauswahl." onchange="submit();" size="1" name="Header:selSelectLocale" id="Header:selSelectLocale">	
+							<option value="en">English</option>
+							<option selected="" value="de">Deutsch</option>
+							<option value="ja"></option>
+						</select>
+					</div>
+				</h:panelGroup>
+				<div class="clear">&#160;</div>
 				<h:panelGroup layout="block" styleClass="free_area0 endline"
 					rendered="#{creator.personType and !(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
 					<span class="large_area0 xSmall_marginRExcl">&nbsp;</span>
