--- a/pubman/pubman_presentation/src/main/webapp/header/ui/StandardImports.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/ui/StandardImports.jspf
@@ -1,31 +1,31 @@
 <%
-            /* 
-            CDDL HEADER START
+/* 
+  CDDL HEADER START
 
-            The contents of this file are subject to the terms of the
-            Common Development and Distribution License, Version 1.0 only
-            (the "License"). You may not use this file except in compliance
-            with the License.
+  The contents of this file are subject to the terms of the
+  Common Development and Distribution License, Version 1.0 only
+  (the "License"). You may not use this file except in compliance
+  with the License.
 
-            You can obtain a copy of the license at license/ESCIDOC.LICENSE
-            or http://www.escidoc.de/license.
-            See the License for the specific language governing permissions
-            and limitations under the License.
+  You can obtain a copy of the license at license/ESCIDOC.LICENSE
+  or http://www.escidoc.de/license.
+  See the License for the specific language governing permissions
+  and limitations under the License.
 
-            When distributing Covered Code, include this CDDL HEADER in each
-            file and include the License file at license/ESCIDOC.LICENSE.
-            If applicable, add the following below this CDDL HEADER, with the
-            fields enclosed by brackets "[]" replaced with your own identifying
-            information: Portions Copyright [yyyy] [name of copyright owner]
+  When distributing Covered Code, include this CDDL HEADER in each
+  file and include the License file at license/ESCIDOC.LICENSE.
+  If applicable, add the following below this CDDL HEADER, with the
+  fields enclosed by brackets "[]" replaced with your own identifying
+  information: Portions Copyright [yyyy] [name of copyright owner]
 
-            CDDL HEADER END
+  CDDL HEADER END
 
-
-            Copyright 2006-2011 Fachinformationszentrum Karlsruhe Gesellschaft
-            für wissenschaftlich-technische Information mbH and Max-Planck-
-            Gesellschaft zur Förderung der Wissenschaft e.V.
-            All rights reserved. Use is subject to license terms.
-             */
+  Copyright 2006-2011 Fachinformationszentrum Karlsruhe Gesellschaft
+  fuer wissenschaftlich-technische Information mbH and Max-Planck-
+  Gesellschaft zur Foerderung der Wissenschaft e.V.
+  All rights reserved. Use is subject to license terms.
+*/
+   
 %>
 <%@ taglib uri="http://java.sun.com/jsf/core" prefix="f" %>
 <%@ taglib uri="http://java.sun.com/jsf/html" prefix="h" %>
@@ -37,6 +37,8 @@
 <style type="text/css">
 	.headerLogo {background-image: url("<h:outputText value='#{ApplicationBean.logoUrl}'/>") !important; background-repeat: norepeat; background-position: top left;}
 </style>
+<link href="/common/resources/cssFramework/main.css" type="text/css" rel="stylesheet" />
+<link href="/common/resources/cssFramework/themes/skin_MPG/styles/theme.css" type="text/css" title="MPG Skin" id="mpgSkin" rel="alternate stylesheet" />
 <h:outputText value="#{ApplicationBean.pubmanStyleTags}" escape="false"/>
 
 <script type="text/javascript" language="JavaScript">var cookieVersion = "<h:outputText value='#{ApplicationBean.cookieVersion}'/>";</script>
@@ -44,8 +46,11 @@
 <link rel="search" type="application/opensearchdescription+xml" title="<h:outputText value='#{lbl.openSearch_desc} #{lbl.openSearch_shortDesc} #{Header.type}'/>" href="<h:outputText value='#{ApplicationBean.pubmanInstanceUrl}#{ApplicationBean.appContext}' />search/OpenSearch.jsp" />
 
 <script type="text/javascript" language="JavaScript" src="resources/commonJavaScript/jquery/jquery.min.js">;</script>
+<%--
+<script type="text/javascript" language="JavaScript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" />
+<script type="text/javascript" language="JavaScript" src="http://code.jquery.com/jquery-latest.js" />
+--%>
 <script type="text/javascript" language="JavaScript" src="resources/scripts.js">;</script>
 <script src="./resources/commonJavaScript/eSciDoc_javascript.js" language="JavaScript" type="text/javascript">;</script>
-<script src="./resources/commonJavaScript/theme_cookie.js" language="JavaScript" type="text/javascript">;</script>
 
 <link href="/cone/js/jquery.suggest.css" rel="stylesheet" type="text/css" />
