checkbox-border-fix for IE -mpg skin

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
@@ -145,6 +145,11 @@ h1, h4, h5 {
 	background-color:#f3f5f5;
 }
 
+input[type=checkbox] {
+	border-width:0;
+	background-color:transparent; 
+}
+
 /* HELP PAGE */
 .maketitle.wrapper {
 	background-image:none;
@@ -618,6 +623,7 @@ tbody .listItem span.statusArea {
 /*SELECT MENU*/
 .itemList .checkBoxSelectButton {
     cursor: pointer;
+	background-color: transparent;
 }
 
 .itemList .checkBoxCloseSelectButton:hover, .selectMenu .checkBoxCloseSelectButton:focus {
