--- a/pubman/pubman_presentation/src/main/webapp/header/ui/MainMenu.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/ui/MainMenu.jspf
@@ -30,9 +30,6 @@
 <%@ taglib uri="http://java.sun.com/jsf/core" prefix="f" %>
 <%@ taglib uri="http://java.sun.com/jsf/html" prefix="h" %>
 
-
-	
-
 <div id="mainMenuSkipLinkAnchor" class="full_area0 mainMenu">
 	<!-- main Menu starts here -->
 	
@@ -75,3 +72,9 @@
 		<h:outputText value=" (#{PubItemStorageSessionBean.displayNumber})" />
 	</h:panelGroup>
 </div>
+<script type="text/javascript">
+	if ($.browser.msie && $.browser.version == 7) {
+		$('.mainMenu').css('margin-top', '-0.7272em');
+		$('.wrapper').css('width', '84.0909em');
+	}
+</script>
