change: globalize settings for itemHealine in itemHeader

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPG/styles/appearance.css
@@ -678,12 +678,13 @@ tbody .listItem span.statusArea {
 }
 
 /*ITEM HEADER*/
+/*
 .itemHeader .itemHeadline {
 	padding: 0 0 0.3636em 0 !important;
 	margin-top:0.2727em;
 	margin-left:0.7272em;
 }
-
+*/
 .fullItem .itemHeadline b {
     font-size: 16px !important;
     font-weight: normal;
