--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/fullItem.css
@@ -130,6 +130,8 @@
 
 .fullItem .itemHeadline {
 	width: 53.82em;
+	padding: 0 0 0.3636em 0;
+	margin-top:0.2727em;
 }
 
 .fullItem .listItem .itemHeadline {
