--- a/pubman/pubman_presentation/src/main/webapp/yearbook/yearbookModeratorList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/yearbook/yearbookModeratorList.jspf
@@ -122,8 +122,8 @@
  		</span>
  		<span class="seperator status"></span>
  		<span class="half_area0_p6 headerSwitchView">
- 			<a class="expand"><span class="noDisplay"><h:outputText title="#{tip.List_Show}" value="#{lbl.List_Show}"/> </span><h:outputText title="#{tip.List_MedView}" value="#{lbl.List_MedView}"/></a>
- 			<a class="collapse"><span class="noDisplay"><h:outputText title="#{tip.List_SelectItem}" value="#{lbl.List_SelectItem}"/> </span><h:outputText title="#{tip.List_ShortView}" value="#{lbl.List_ShortView}"/></a>
+ 			<a class="expandTriangle"><span class="noDisplay"><h:outputText title="#{tip.List_Show}" value="#{lbl.List_Show}"/> </span><h:outputText title="#{tip.List_MedView}" value="#{lbl.List_MedView}"/></a>
+ 			<a class="collapseTriangle"><span class="noDisplay"><h:outputText title="#{tip.List_SelectItem}" value="#{lbl.List_SelectItem}"/> </span><h:outputText title="#{tip.List_ShortView}" value="#{lbl.List_ShortView}"/></a>
  		</span>
  	</div>
  	<ol>
@@ -166,8 +166,8 @@
 				<h:outputText value="<abbr class='unapi-id' title='#{item.identifier}'></abbr>" escape="false" rendered="#{item.isReleased}"/>
 				<div class="free_area0_p0  small_marginLIncl endline listItemLine">
 					<span class="huge_area0_p8 endline labelLine">
-			 			<div><a class="collapse"><span class="noDisplay"><h:outputText value="#{lbl.ViewItemShort_lblShow}"/> </span><h:outputText value="#{lbl.ViewItemShort_lblLess}"/><span class="noDisplay"> <h:outputText  value="#{lbl.ViewItemShort_lblDetails}"/></span></a>
-						<a class="expand"><span class="noDisplay"><h:outputText value="#{lbl.ViewItemShort_lblShow}"/> </span><h:outputText value="#{lbl.ViewItemShort_lblMore}"/><span class="noDisplay"> <h:outputText value="#{lbl.ViewItemShort_lblDetails}"/></span></a></div>
+			 			<div><a class="collapseTriangle"><span class="noDisplay"><h:outputText value="#{lbl.ViewItemShort_lblShow}"/> </span><h:outputText value="#{lbl.ViewItemShort_lblLess}"/><span class="noDisplay"> <h:outputText  value="#{lbl.ViewItemShort_lblDetails}"/></span></a>
+						<a class="expandTriangle"><span class="noDisplay"><h:outputText value="#{lbl.ViewItemShort_lblShow}"/> </span><h:outputText value="#{lbl.ViewItemShort_lblMore}"/><span class="noDisplay"> <h:outputText value="#{lbl.ViewItemShort_lblDetails}"/></span></a></div>
 						<h:outputText value="#{lbl.ViewItemShort_lblCreators}"/><span class="noDisplay">: </span>
 					</span>
 					
